# code_contests

./: .dockerignore  .gitignore  Dockerfile  WORKSPACE  test_python_binding.py
.github/: build_code_tester.yml
.github/workflows/: build_code_tester.yml
execution/py_tester_bindings/: BUILD.bazel  build_wheels.sh  make_python_bindings.sh  py_tester_sandboxer_bindings.cc  requirements.txt  setup.py  test_bindings.sh  test_python_binding.py
